# finstamy

./: .gitignore
academic-composition-engine/: CHANGELOG.md  README.md  RELEASE_NOTES_v0.1.0.md  pyproject.toml
academic-composition-engine/.github/workflows/: ci.yml
academic-composition-engine/app/: cli.py  contracts.py
academic-composition-engine/app/config/: devils_advocate_scoring.json
academic-composition-engine/app/eval/: history.py  reporting.py  runner.py
academic-composition-engine/app/graph/: graph.py  state.py
academic-composition-engine/app/services/: candidate_sources.py  checkpointer.py  citations.py  devils_advocate.py  docling_client.py  grobid_client.py  io_utils.py  lancedb_store.py  languagetool_client.py  ollama_client.py  retrieval.py  run_artifacts.py  source_parser.py
academic-composition-engine/docs/: obsidian_sync_ritual.md
academic-composition-engine/eval/: runner.py  thresholds.json
academic-composition-engine/eval/cases/: case_demo_s1.json
academic-composition-engine/eval/reports/: baseline.json  compare_eval_20260407T165053Z_vs_eval_report_20260407T164536.281825+0000.json  compare_eval_20260407T165057Z_vs_eval_report_20260407T164536.281825+0000.json  compare_eval_20260407T181139Z_vs_eval_20260407T181139Z.json  latest.json  (+10 more)
academic-composition-engine/scripts/: release_preflight_v0.1.0.sh
academic-composition-engine/tests/: test_controlled_research_intake.py  test_devils_advocate_kpis.py  test_eval_baseline.py  test_eval_kpi_history.py  test_obsidian_and_devils_advocate.py  test_research_mcp.py  test_smoke_cli.py
(+95 files in other folders)
