[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "academic-composition-engine"
version = "0.1.0"
description = "Evidence-grounded academic composition engine"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.50",
  "pydantic>=2.9.0",
  "typer>=0.12.5",
  "pyyaml>=6.0.2",
  "lancedb>=0.24.3",
  "langgraph-checkpoint-sqlite>=2.0.0"
]

[project.scripts]
ace = "app.cli:app"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]